Fix spacing with the Merge Tag pickers
Finally figured out the answer is using `calc()` to handle relative + absolute offsets.

--- a/assets/css/scss/admin-merge-tags.scss
+++ b/assets/css/scss/admin-merge-tags.scss
@@ -11,6 +11,7 @@
 	top: auto;
 }
 
+// Merge Tags inside field options
 .all-merge-tags {
 
 	&.right {
@@ -30,36 +31,20 @@
 	}
 }
 
-table .all-merge-tags {
-	&.right {
-		right: 2px;
-		left: auto;
-	}
-
-	&.left {
-		right: auto;
-		left: 2px;
-	}
-
-	text-align: center;
-
-	* {
-		text-align: left;
-	}
+// View Settings tables.
+.ui-tabs table td {
+	position: relative;
 }
 
+// Merge Tags in two-column layout (Edit Entry > Single Link).
+td .all-merge-tags,
 th .all-merge-tags {
-	width: 5%;
-	margin-top: .25rem;
+	width: calc( 5% + 10px ); // 10px padding for the table cell.
 
-	&.right {
-		right: 0;
-		left: auto;
-	}
-
+	&.right,
 	&.left {
 		right: auto;
-		left: 0;
+		left: auto;
 	}
 }
 
@@ -73,22 +58,13 @@ th .all-merge-tags {
 		}
 
 		&.left {
-			right: 2px;
+			right: 8px;
 			left: auto;
 		}
 
 		&.right {
 			right: auto;
-			left: 2px;
-		}
-	}
-
-	th .all-merge-tags {
-		left: 0;
-		right: auto;
-		text-align: left;
-		* {
-			text-align: right;
+			left: 8px;
 		}
 	}
 }
